--- a/Landing/src/app/globals.css
+++ b/Landing/src/app/globals.css
@@ -6,7 +6,9 @@
   box-sizing: border-box;
   scrollbar-width: none;
 }
-
+body{
+  /* overflow-y: hidden; */
+}
 a{
   text-decoration: none;
 }
